# Axiom

./: .gitignore  CMakeLists.txt  README.md
include/: FIXGateway.hpp  OrderBook.hpp  TradeExporter.hpp
simulator/: main.cpp  visualize.py
src/: fix_gateway.cpp  main.cpp  websocket_server.py
tests/: test_orderbook.cpp
